# shortening_urls

./: .gitignore  README.md
.devcontainer/: compose.yml  devcontainer.json
app/: Cargo.toml
app/migrations/: 001_initial.sql  002_add_clicks.sql  003_add_teams.sql  004_add_api_keys.sql  005_analytics_enhancements.sql
app/public/: app.js  index.html  styles.css
app/src/: error.rs  main.rs  middleware.rs  models.rs  state.rs
app/src/handlers/: analytics.rs  api_keys.rs  auth.rs  mod.rs  teams.rs  urls.rs
app/src/services/: redis.rs
