[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "derive"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
validator = { version = "0.18", features = ["derive"] }
nanoid = "0.4"
redis = { version = "1.0.5", features = ["aio", "tokio-comp"] }
hex = "0.4"
rand = "0.8"
md5 = "0.7"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
